# server/src/module/system/tenant/tenant.controller.ts
@@ -3,15 +3,15 @@ import {Controller, Post, Body, Get, Param, Query, Put, Delete} from '@nestjs/co
 import {ApiTags, ApiOperation, ApiBody} from '@nestjs/swagger';
 import { RequirePermission } from 'src/common/decorators/require-premission.decorator';
 import {SysTenantService } from './tenant.service';
-import {CreateSysTenantDto, ListSysTenantDto, UpdateSysTenantDto} from './dto/tenant.dto';
+import { AllListSysTenantDto, CreateSysTenantDto, ListSysTenantDto, UpdateSysTenantDto } from "./dto/tenant.dto";
 
 
-@ApiTags('租户表')
+@ApiTags('租户管理')
 @Controller('system/tenant')
 export class SysTenantController {
 constructor(private readonly sysTenantService: SysTenantService) {}
     @ApiOperation({
-        summary: '租户表-创建',
+        summary: '租户管理-创建',
     })
    @ApiBody({
        type: CreateSysTenantDto,
@@ -25,7 +25,7 @@ constructor(private readonly sysTenantService: SysTenantService) {}
 
 
     @ApiOperation({
-        summary: '租户表-列表',
+        summary: '租户管理-列表',
     })
     @RequirePermission('system:tenant:list')
     @Get('list')
@@ -34,7 +34,7 @@ constructor(private readonly sysTenantService: SysTenantService) {}
     }
 
     @ApiOperation({
-        summary: '租户表-详情',
+        summary: '租户管理-详情',
     })
     @RequirePermission('system:tenant:query')
     @Get(':id')
@@ -43,7 +43,7 @@ constructor(private readonly sysTenantService: SysTenantService) {}
     }
 
     @ApiOperation({
-        summary: '租户表-修改',
+        summary: '租户管理-修改',
     })
     @RequirePermission('system:tenant:edit')
     @Put()
@@ -52,7 +52,7 @@ constructor(private readonly sysTenantService: SysTenantService) {}
     }
 
     @ApiOperation({
-        summary: '租户表-删除',
+        summary: '租户管理-删除',
     })
     @RequirePermission('system:tenant:remove')
     @Delete(':id')
