# server/src/module/system/tenant/tenant.service.ts
@@ -2,7 +2,7 @@ import { InjectRepository } from '@nestjs/typeorm';
 import { Repository } from 'typeorm';
 import { Injectable } from '@nestjs/common';
 import { ResultData } from 'src/common/utils/result';
-import { CreateSysTenantDto, ListSysTenantDto, UpdateSysTenantDto } from './dto/tenant.dto';
+import { AllListSysTenantDto, CreateSysTenantDto, ListSysTenantDto, UpdateSysTenantDto } from "./dto/tenant.dto";
 import { SysTenantEntity } from './entity/tenant.entity';
 
 @Injectable()
@@ -62,6 +62,20 @@ export class SysTenantService {
       list,
       total,
     });
+  }
+
+  async findAllTenant(query:AllListSysTenantDto){
+    const entity = this.tenantEntityRep.createQueryBuilder('entity');
+    entity.where({ delFlag: '0' });
+    if(query.tenantName){
+      entity.andWhere('entity.tenantName LIKE :tenantName', { tenantName: `%${query.tenantName}%` });
+    }
+    entity.select([
+      'entity.tenantId',
+      'entity.tenantName'
+    ]);
+    const res = await entity.getMany();
+    return ResultData.ok(res);
   }
 
   async findOne(id: number) {
